# vacuum_ml

./: .gitignore  CLAUDE.md  pyproject.toml
docs/: remote-training.md  reward-design.md  training-history.md
docs/superpowers/plans/: 2026-04-17-vacuum-ml-rl.md  2026-04-18-roomba-redesign.md
docs/superpowers/specs/: 2026-04-18-roomba-redesign.md
tests/: test_dirt_map.py  test_evaluate.py  test_partial_map.py  test_room.py  test_vacuum_env.py
vacuum_ml/: visualize.py
vacuum_ml/baselines/: random_agent.py
vacuum_ml/env/: __init__.py  dirt_map.py  partial_map.py  renderer.py  room.py  vacuum_env.py
vacuum_ml/training/: evaluate.py  policy.py  train.py  train_sac.py
